Fix line spacing

--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,7 @@
     text-decoration: none;
     color: #FBFBFF;
   }
+
+  .linespacing {
+    line-height: 16pt;
+  } 
